// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component tests snapshot test of Card 1`] = `
<div>
  <div
    class="ideaContainer"
  >
    <form
      class="ideaForm"
    >
      <label
        class="ideaTitleLabel"
      >
        <input
          class="ideaTitleInput"
          id="title-undefined"
          name="title"
          placeholder="Title"
          required=""
          value=""
        />
      </label>
      <label
        class="ideaDescriptionLabel"
      >
        <textarea
          class="ideaDescriptionInput"
          id="description-undefined"
          maxlength="140"
          name="description"
          placeholder="Description"
        />
      </label>
      <div
        class="callToActionContainer"
      >
        <button
          aria-label="Add Button"
          type="submit"
        >
          Add
        </button>
        <button
          type="button"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Card component tests snapshot test of Card with ideas 1`] = `
<DocumentFragment>
  <div
    class="ideaContainer"
  >
    <form
      class="ideaForm"
    >
      <label
        class="ideaTitleLabel"
      >
        <input
          aria-label="Example idea"
          class="ideaTitleInput"
          id="title-1"
          name="title"
          placeholder="Title"
          required=""
          value="Example idea"
        />
      </label>
      <label
        class="ideaDescriptionLabel"
      >
        <textarea
          aria-label="Example description"
          class="ideaDescriptionInput"
          id="description-1"
          maxlength="140"
          name="description"
          placeholder="Description"
        >
          Example description
        </textarea>
      </label>
      <p
        aria-label="Timestamp"
        class="ideaTimestamp"
      >
        2023-02-07 - 09:18:18
      </p>
      <div
        class="callToActionContainer"
      >
        <button
          aria-label="Update Button"
          type="submit"
        >
          Update
        </button>
        <button
          type="button"
        >
          Reset
        </button>
        <button
          aria-label="Delete Button"
        >
          Delete
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
